--- a/README
+++ b/README
@@ -1,6 +1,8 @@
 
 $ git clone git://gist.github.com/2341819.git ~/.dotfile
 $ cd ~/.dotfile
+$ git submodule init
+$ git submodule update
 $ ./setup.sh
 
 
